--- a/static/css/domain.css
+++ b/static/css/domain.css
@@ -19,7 +19,6 @@
     align-self: left;
     
 }
-
 .board-display{
     position: relative;
     width: 100%;
@@ -27,10 +26,9 @@
     display: flex;
     flex-direction: row;
     padding: 0% 3% 2% 3%;
-    gap: 2%;
     justify-content: space-between;
  }
-.card-display{
+ .card-display{
     display: flex;
     flex-direction: row;
     align-items: flex-start;
@@ -46,13 +44,16 @@
     border-radius: 12px;
     background-color: #333332;
     width: 25vw;
-
+    display: flex;
+    flex-direction: column;
+    gap:1%;
 }
 .grid {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
 }
+
 .title-line{
     display: flex;
     flex-direction: row;
@@ -60,4 +61,37 @@
     padding-top: 2%;
     width:20%;
 }
+.text{
+    color: #ffffff;
+    justify-self: top;
+    align-self: left;
+    padding-left: 2%;
+    padding-top: 5%;
+    font-weight: 500;
+    line-height: 30%;
+}
+.wrap{
+    height: 70%;
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 1%;
+    padding: 0.5%;
+    justify-content: center;
+    gap:1.5%;
+    padding-top: 3%;
+}
 
+.text-content{
+    color: #ffffff;
+    font-family: Arial, Helvetica, sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    justify-self: center;
+    padding: 0%;
+    margin: 0%;
+    font-size: 110%;
+}
+#map{
+    width: 100%;
+    height: 80%;
+}
