--- a/static/css/ip.css
+++ b/static/css/ip.css
@@ -45,7 +45,6 @@
     width: 25vw;
     display: flex;
     flex-direction: column;
-    
     gap:1%;
 }
 .grid {
@@ -65,18 +64,30 @@
     justify-self: top;
     align-self: left;
     padding-left: 2%;
-    font-size: x-large; 
-    margin-top: 2%;
+    padding-top: 5%;
+    font-weight: 500;
+    line-height: 30%;
 }
+.wrap{
+    height: 70%;
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 1%;
+    padding: 0.5%;
+    justify-content: center;
+    gap:1.5%;
+    padding-top: 3%;
+}
+
 .text-content{
     color: #ffffff;
     font-family: Arial, Helvetica, sans-serif;
     font-style: normal;
     font-weight: 400;
-    margin: 0;
-    padding-top: 2%;
-    font-size: large;
     justify-self: center;
+    padding: 0%;
+    margin: 0%;
+
 }
 #map{
     width: 100%;
