--- a/templates/url.html
+++ b/templates/url.html
@@ -1,6 +1,9 @@
 {% extends "base.html" %}
 {% block title %} URL Analysis {% endblock %}
 {% block link  %}{{ url_for('static', filename='css/url.css') }} {% endblock %}
+{% block scripts %} 
+<script src="{{ url_for('static', filename='js/ip.js') }}"></script>
+{% endblock %}
 {% block content %}
 
 <div class="title-line">
@@ -8,8 +11,18 @@
     <h1 class="content-title"> {{url_link}}</h1>
 </div>
 <div class="input-group mb-2 inputbar" style="align-self:center; height:6vh; width: 75%; ">
-    <input type="text" class="form-control " placeholder="Recipient's username" aria-label="Recipient's username" aria-describedby="button-addon2">
-    <button class="btn btn-outline-secondary" type="button" id="button-addon2">Button</button>
+    <input id="inputURL"  type="text" class="form-control " placeholder="Enter a URL" aria-label="enter" aria-describedby="button-addon2">
+    <button id="submitURL" class="btn btn-outline-secondary" type="button" >Enter</button>
 </div>
-<div class="item">1</div>
+<div class="item">
+    <h3 class="text">Virus Total </h3>
+    <div class="wrap">
+        <p class="text-content" style="align-self: left;  padding-left: 2%; padding-top: 0%;"> Malicious :{{data["VT anal"]["malicious"]}} </p>
+        <p class="text-content" style="align-self: left;  padding-left: 2%; padding-top: 0%;"> Suspious :{{data["VT anal"]["suspious"]}} </p>
+        <p class="text-content" style="align-self: left;  padding-left: 2%; padding-top: 0%;"> Undetected :{{data["VT anal"]["undetected"]}} </p>
+        <p class="text-content" style="align-self: left;  padding-left: 2%; padding-top: 0%;"> Harmless :{{data["VT anal"]["harmless"]}} </p>
+        <p class="text-content" style="align-self: left;  padding-left: 2%; padding-top: 0%;"> Timeout :{{data["VT anal"]["timeout"]}} </p>
+        <p class="text-content" style="align-self: left;  padding-left: 2%; padding-top: 0%;"> {{data["VT anal"]["text"]}} </p>
+    </div>
+</div>
 {% endblock %}
