--- a/static/css/base.css
+++ b/static/css/base.css
@@ -49,7 +49,7 @@
     font-family: Arial, Helvetica, sans-serif;
     font-style: normal;
     font-weight: 700;
-    font-size: 36px;
+    font-size: clamp(36px, calc(1rem + 0.5vw), 56px);
     line-height: 20%;
     margin-left: 3%;
     margin-top: 1%;
