--- a/static/css/domain.css
+++ b/static/css/domain.css
@@ -1,59 +1,49 @@
 .title-display{
     display: flex;
     flex-direction: row;
-    gap:11%;
+    gap:1.5%;
     align-content: space-between;
-    height: 15%;
 }
 .content-title{
-    position:relative;
     font-family: Arial, Helvetica, sans-serif;
     font-style: normal;
     font-weight: 700;
-    font-size: 33px;
-    line-height: 120%;
-    /* or 58px */
-    letter-spacing: -0.02em;
+    font-size: 200%;
+    width: 30%;
     color: #000000;
-    text-align: left; 
-    align-self: left;
-    
+    margin-left: 3%;
+    padding-top: 2%;
+}
+.search-bar{
+    height: 5%;
+    margin-right: 3%;
+    padding-top: 2%;
 }
 .board-display{
-    position: relative;
-    width: 100%;
+    display: grid;
+    padding: 1.5% 3%;
+    grid-template-columns: repeat(auto-fit, minmax(25%, 1fr));
     height: 100%;
-    display: flex;
-    flex-direction: row;
-    padding: 0% 3% 2% 3%;
-    justify-content: space-between;
+    gap:2%;
  }
- .card-display{
-    display: flex;
-    flex-direction: row;
-    align-items: flex-start;
-    padding: 0px;
-    isolation: isolate;
-    position: relative;
-    height:100%;
-    border-radius: 12px;
-}
 .item{
-    padding: 0px;
     position: relative;
     border-radius: 12px;
-    background-color: #333332;
-    width: 25vw;
+    background-color: #333332; 
     display: flex;
     flex-direction: column;
-    gap:1%;
+    gap:2%;
+}
+.content-grid {
+    display: grid;
+    gap: 2%;
+    grid-template-columns: repeat(auto-fit, minmax(80%, 100%));
 }
 .grid {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
 }
-
 .title-line{
     display: flex;
     flex-direction: row;
@@ -61,35 +51,39 @@
     padding-top: 2%;
     width:20%;
 }
-.text{
+.text-title{
     color: #ffffff;
     justify-self: top;
     align-self: left;
     padding-left: 2%;
-    padding-top: 5%;
+    padding-top: 2%;
+    margin-bottom: 0%;
     font-weight: 500;
-    line-height: 30%;
+    font-size: clamp(24px, calc(1rem + 0.5vw), 30px);
 }
 .wrap{
-    height: 70%;
-    display: flex;
-    flex-direction: column;
-    margin-bottom: 1%;
-    padding: 0.5%;
-    justify-content: center;
-    gap:1.5%;
-    padding-top: 3%;
+    display:grid;
+    padding-top: 4%;
+    grid-template-columns: repeat(auto-fit, minmax(30%, 100%));
+    height: 80%;
 }
-
 .text-content{
     color: #ffffff;
     font-family: Arial, Helvetica, sans-serif;
     font-style: normal;
     font-weight: 400;
-    justify-self: center;
-    padding: 0%;
-    margin: 0%;
-    font-size: 110%;
+    font-size: clamp(20px, calc(0.8rem + 0.5vw), 28px);
+    text-align: left;
+    margin-bottom: 0.5%;
+    padding-left: 2%;
+}
+.blacklist-count{
+    color: #ffffff;
+    font-family: Arial, Helvetica, sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: clamp(28px, calc(0.8rem + 0.5vw), 36px);
+    text-align: center;
 }
 #map{
     width: 100%;
