--- a/static/css/home.css
+++ b/static/css/home.css
@@ -4,7 +4,7 @@
     font-family: Arial, Helvetica, sans-serif;
     font-style: normal;
     font-weight: 700;
-    font-size: 48px;
+    font-size: clamp(48px, calc(1rem + 0.5vw), 56px); 
     letter-spacing: -0.02em;
     color: #000000;
     text-align: center; 
