--- a/static/css/url.css
+++ b/static/css/url.css
@@ -1,34 +1,53 @@
+.title-display{
+    display: flex;
+    flex-direction: column;
+    gap:1.5%;
+    align-content: space-between;
+    padding-top: 4%;
+}
 .content-title{
-    position:relative;
     font-family: Arial, Helvetica, sans-serif;
     font-style: normal;
     font-weight: 700;
-    font-size: 40px;
-    line-height: 120%;
-    /* or 58px */
+    font-size: clamp(48px, calc(1rem + 0.5vw), 56px);
     letter-spacing: -0.02em;
     color: #000000;
-    text-align: left; 
-    align-self: left;
-    
+    text-align: center; 
+    align-self: center;
+   
 }
-.title-line{
-    display: flex;
-    flex-direction: column;
-    padding-left: 10%;
-    padding-top: 2%;
-    width:100%;
+.wrap{
+    display:grid;
+    padding-top: 4%;
+    grid-template-columns: repeat(auto-fit, minmax(30%, 100%));
+    height: 80%;
 }
-
 .item{
-    padding: 0px;
     position: relative;
     border-radius: 12px;
-    background-color: #333332;
-    width: 80%;
-    align-self: center;
+    background-color: #333332; 
+    display: flex;
+    flex-direction: column;
+    gap:2%;
+    margin: 2% 3%;
     height: 100%;
-    margin: 2%;
-    margin-top: 1.5%;
-
+}
+.text-title{
+    color: #ffffff;
+    justify-self: top;
+    align-self: left;
+    padding-left: 2%;
+    padding-top: 2%;
+    margin-bottom: 0%;
+    font-weight: 500;
+    font-size: clamp(32px, calc(1rem + 0.5vw), 36px);
+}
+.text-content{
+    color: #ffffff;
+    font-family: Arial, Helvetica, sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: clamp(24px, calc(0.8rem + 0.5vw), 28px);
+    text-align: left;
+    padding-left: 2%;
 }
