--- a/templates/ip.html
+++ b/templates/ip.html
@@ -7,67 +7,62 @@
 {% endblock %}
 {% block content %}
 <div class="title-display">
-    <div class="title-line">
-        <h1  class="content-title"> IP: &nbsp;</h1>
-        <h1 class="content-title"> {{ip_addr}} </h1>
-    </div> 
-    <div class="input-group mb-2" style="position:relative;height: fit-content; padding-right: 3%;padding-top:2%; align-self: right;">
-        <input type="text" class="form-control" id="inputIP" placeholder="IP address" aria-label="IP address" aria-describedby="button-addon2">
+    <h1  class="content-title">  IP: {{ip_addr}} </h1>
+    <div class="input-group mb-2 search-bar">
+        <input type="text" class="form-control" id="inputIP" placeholder="IP address" aria-label="Enter an IP address" aria-describedby="button-addon2">
         <button class="btn btn-outline-secondary" type="button" id="submitIP">Enter</button>
     </div>
 </div>
 
 <div class="board-display">
-    <div class="card card-display" style="width: 35%; background-color:  #333332;" >
+    <div class="card" style=" background-color:  #333332;" >
         <div id="map" class="card-img-top" data-lat = "{{ data['Geolocation']['latitude'] }}" data-lng="{{ data['Geolocation']['longitude'] }}" 
         data-title="{{ data['Geolocation']['City'] }}" ></div>
-        <div class="card-body" style="width: 100%;">
+        <div class="card-body" >
             <div class="wrap">
                 <p class="text-content">Country: {{data["Geolocation"]["Country"]}}</p>
                 <p class="text-content">Region: {{data["Geolocation"]["Region"]}}</p>
                 <p class="text-content">City: {{data["Geolocation"]["City"]}}</p>
-            </div>
-            
-          
-        </div>
-    </div>
-    <div class="grid" >
-       <div class="item" style="height: 23%;"> 
-            <h3 class=" text" style ="text-align: left;">ISP: </h3>
-            <p class="text-content" style="align-self: center; padding-top: 5%;">{{data["ASN"]["ISP"]}} </p>
-       </div>
-       <div class="item" style="height: 23%">
-            <h3 class=" text" style ="text-align: left;">Organization: </h3>
-            <p class="text-content" style="align-self: center;padding-top: 5%;">{{data["Geolocation"]["Org"]}} </p>
-       </div>
-       
-       <div class="item" style="height: 23%;"> 
-            <h3 class=" text" style ="text-align: left;">IP Range: </h3>
-            <p class="text-content" style="align-self: center;padding-top: 5%;">{{data["ASN"]["Range"]}} </p>
-       </div>
-       <div class="item" style="height: 23%;"> 
-            <h3 class=" text" style ="text-align: left;">HostName: </h3>
-            <p class="text-content" style="align-self: center; padding-top: 5%;"> {{data["Geolocation"]["Hostname"]}} </p>   
-       </div>
-    </div>
-    <div class="grid">
-        <div class="item" style="height: 49%;"> 
-            <h3 class="text">BlackList </h3>
-            <div class="wrap">
-                <h2 class="text" style = "font-size: 28px; align-self: center; padding-top: 3%;">{{data["BlackList"]["count"]}} blacklisted count</h2>
-                 <p class="text-content" style="align-self: center;">{{data["BlackList"]["sites"]}} </p>
             </div> 
         </div>
-        <div class="item" style="height: 49%;"> 
-            <h3 class="text">Virus Total </h3>
+    </div>
+    <div class="content-grid">
+       <div class="item"> 
+            <h3 class="text-title" >ISP: </h3>
+            <p class="text-content" style="text-align: center; padding-top: 7%;">{{data["ASN"]["ISP"]}} </p>
+       </div>
+       <div class="item">
+            <h3 class=" text-title">Organization: </h3>
+            <p class="text-content" style="text-align: center; padding-top: 7%;">{{data["Geolocation"]["Org"]}} </p>
+       </div>
+       
+       <div class="item"> 
+            <h3 class=" text-title" >IP Range: </h3>
+            <p class="text-content" style="text-align: center; padding-top: 7%;">{{data["ASN"]["Range"]}} </p>
+       </div>
+       <div class="item"> 
+            <h3 class=" text-title" >HostName: </h3>
+            <p class="text-content" style="text-align: center; padding-top: 7%;"> {{data["Geolocation"]["Hostname"]}} </p>   
+       </div>
+    </div>
+    <div class="content-grid">
+        <div class="item"> 
+            <h3 class="text-title">BlackList </h3>
             <div class="wrap">
-                <p class="text-content" style="align-self: left;  padding-left: 2%; padding-top: 0%;"> Malicious :{{data["VT anal"]["malicious"]}} </p>
-                <p class="text-content" style="align-self: left;  padding-left: 2%; padding-top: 0%;"> Suspious :{{data["VT anal"]["suspious"]}} </p>
-                <p class="text-content" style="align-self: left;  padding-left: 2%; padding-top: 0%;"> Undetected :{{data["VT anal"]["undetected"]}} </p>
-                <p class="text-content" style="align-self: left;  padding-left: 2%; padding-top: 0%;"> Harmless :{{data["VT anal"]["harmless"]}} </p>
-                <p class="text-content" style="align-self: left;  padding-left: 2%; padding-top: 0%;"> Timeout :{{data["VT anal"]["timeout"]}} </p>
-                <p class="text-content" style="align-self: left;  padding-left: 2%; padding-top: 0%;"> {{data["VT anal"]["text"]}} </p>
-            </div>
+                <h2 class="blacklist-count">{{data["BlackList"]["count"]}} blacklisted count</h2>
+                 <p class="text-content" style="text-align: center;">{{data["BlackList"]["sites"]}} </p>
+            </div> 
+        </div>
+        <div class="item" > 
+            <h3 class="text-title">Virus Total </h3>
+            <div class="wrap">
+                <p class="text-content"> Malicious :{{data["VT anal"]["malicious"]}} </p>
+                <p class="text-content"> Suspious :{{data["VT anal"]["suspious"]}} </p>
+                <p class="text-content"> Undetected :{{data["VT anal"]["undetected"]}} </p>
+                <p class="text-content"> Harmless :{{data["VT anal"]["harmless"]}} </p>
+                <p class="text-content"> Timeout :{{data["VT anal"]["timeout"]}} </p>
+                <p class="text-content"> {{data["VT anal"]["text"]}} </p>
+          </div>
             
         </div>
     </div>
