--- a/templates/url.html
+++ b/templates/url.html
@@ -5,24 +5,22 @@
 <script src="{{ url_for('static', filename='js/ip.js') }}"></script>
 {% endblock %}
 {% block content %}
-
-<div class="title-line">
-    <h1  class="content-title"> URL link: &nbsp; </h1>
-    <h1 class="content-title"> {{url_link}}</h1>
-</div>
-<div class="input-group mb-2 inputbar" style="align-self:center; height:6vh; width: 75%; ">
-    <input id="inputURL"  type="text" class="form-control " placeholder="Enter a URL" aria-label="enter" aria-describedby="button-addon2">
-    <button id="submitURL" class="btn btn-outline-secondary" type="button" >Enter</button>
+<div class="title-display">
+    <h1  class="content-title"> URL link:  {{url_link}}</h1>
+    <div class="input-group mb-2 inputbar" style="align-self:center; height:6vh; width: 75%; ">
+        <input id="inputURL"  type="text" class="form-control " placeholder="Enter a URL" aria-label="enter" aria-describedby="button-addon2">
+        <button id="submitURL" class="btn btn-outline-secondary" type="button" >Enter</button>
+    </div>
 </div>
 <div class="item">
-    <h3 class="text">Virus Total </h3>
+    <h3 class="text-title">Virus Total </h3>
     <div class="wrap">
-        <p class="text-content" style="align-self: left;  padding-left: 2%; padding-top: 0%;"> Malicious :{{data["VT anal"]["malicious"]}} </p>
-        <p class="text-content" style="align-self: left;  padding-left: 2%; padding-top: 0%;"> Suspious :{{data["VT anal"]["suspious"]}} </p>
-        <p class="text-content" style="align-self: left;  padding-left: 2%; padding-top: 0%;"> Undetected :{{data["VT anal"]["undetected"]}} </p>
-        <p class="text-content" style="align-self: left;  padding-left: 2%; padding-top: 0%;"> Harmless :{{data["VT anal"]["harmless"]}} </p>
-        <p class="text-content" style="align-self: left;  padding-left: 2%; padding-top: 0%;"> Timeout :{{data["VT anal"]["timeout"]}} </p>
-        <p class="text-content" style="align-self: left;  padding-left: 2%; padding-top: 0%;"> {{data["VT anal"]["text"]}} </p>
+        <p class="text-content" > Malicious :{{data["malicious"]}} </p>
+        <p class="text-content" > Suspious :{{data["suspious"]}} </p>
+        <p class="text-content" > Undetected :{{data["undetected"]}} </p>
+        <p class="text-content" > Harmless :{{data["harmless"]}} </p>
+        <p class="text-content" > Timeout :{{data["timeout"]}} </p>
+        <p class="text-content" > {{data["text"]}} </p>
     </div>
 </div>
 {% endblock %}
