--- a/templates/ip.html
+++ b/templates/ip.html
@@ -56,12 +56,26 @@
         <div class="item" > 
             <h3 class="text-title">Virus Total </h3>
             <div class="wrap">
-                <p class="text-content"> Malicious :{{data["VT anal"]["malicious"]}} </p>
-                <p class="text-content"> Suspious :{{data["VT anal"]["suspious"]}} </p>
-                <p class="text-content"> Undetected :{{data["VT anal"]["undetected"]}} </p>
-                <p class="text-content"> Harmless :{{data["VT anal"]["harmless"]}} </p>
-                <p class="text-content"> Timeout :{{data["VT anal"]["timeout"]}} </p>
-                <p class="text-content"> {{data["VT anal"]["text"]}} </p>
+                <div class="icon">
+                    <img src="{{ url_for('static', filename='src/malicious.png') }}" alt="domain" width="10%" height="80%">
+                    <p class="text-content"> Malicious : {{data["VT anal"]["malicious"]}} </p>
+                </div>
+                <div class="icon">
+                    <img src="{{ url_for('static', filename='src/suspicious.png') }}" alt="domain" width="10%" height="80%">
+                    <p class="text-content"> Suspicious : {{data["VT anal"]["suspicious"]}} </p>
+                </div>
+                <div class="icon">
+                    <img src="{{ url_for('static', filename='src/undetected.png') }}" alt="domain" width="10%" height="80%">
+                    <p class="text-content"> Undetected : {{data["VT anal"]["undetected"]}} </p>
+                </div>
+                <div class="icon">
+                    <img src="{{ url_for('static', filename='src/harmless.png') }}" alt="domain" width="10%" height="80%">
+                    <p class="text-content"> Harmless : {{data["VT anal"]["harmless"]}} </p>
+                </div>
+                <div class="icon">
+                    <img src="{{ url_for('static', filename='src/timeout.png') }}" alt="domain" width="10%" height="80%">
+                    <p class="text-content"> Timeout : {{data["VT anal"]["timeout"]}} </p>
+                </div>           
           </div>
             
         </div>
