--- a/static/css/base.css
+++ b/static/css/base.css
@@ -13,9 +13,7 @@
     padding-top: 5%;
     justify-content: top;
     position: relative;
-}
-    
-
+} 
 .nav-item{
     z-index: 9999;
     width: 110%;
@@ -67,5 +65,31 @@
     border-radius: 5px;
     flex-direction: column;
     height: 100%;
-
+}
+.text-content{
+    color: #ffffff;
+    font-family: Arial, Helvetica, sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: clamp(20px, calc(0.8rem + 0.5vw), 28px);
+    text-align: left;
+    padding-left: 2%;
+}
+.wrap{
+    display:grid;
+    padding-top: 4%;
+    grid-template-columns: repeat(auto-fit, minmax(30%, 100%));
+    height: 80%;
+}
+.board-display{
+    display: grid;
+    padding: 1.5% 3%;
+    grid-template-columns: repeat(auto-fit, minmax(25%, 1fr));
+    height: 100%;
+    gap:2%;
+}
+.icon{
+    display: flex;
+    flex-direction: row;
+    padding-left: 2%;
 }
