--- a/static/css/url.css
+++ b/static/css/url.css
@@ -16,12 +16,6 @@
     align-self: center;
    
 }
-.wrap{
-    display:grid;
-    padding-top: 4%;
-    grid-template-columns: repeat(auto-fit, minmax(30%, 100%));
-    height: 80%;
-}
 .item{
     position: relative;
     border-radius: 12px;
@@ -42,12 +36,7 @@
     font-weight: 500;
     font-size: clamp(32px, calc(1rem + 0.5vw), 36px);
 }
-.text-content{
-    color: #ffffff;
-    font-family: Arial, Helvetica, sans-serif;
-    font-style: normal;
-    font-weight: 400;
-    font-size: clamp(24px, calc(0.8rem + 0.5vw), 28px);
-    text-align: left;
-    padding-left: 2%;
+.wrap{
+    margin-top: 0%;
+    padding-top: 1%;
 }
