--- a/static/css/base.css
+++ b/static/css/base.css
@@ -93,3 +93,18 @@
     flex-direction: row;
     padding-left: 2%;
 }
+.blacklist-count{
+    color: #ffffff;
+    font-family: Arial, Helvetica, sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: clamp(28px, calc(0.8rem + 0.5vw), 36px);
+    text-align: center;
+}
+.blacklist-details{
+    display: flex;
+    flex-direction: row;
+    height: 100%;
+    width: 100%;
+    justify-content: center;
+}
