--- a/templates/domain.html
+++ b/templates/domain.html
@@ -52,9 +52,14 @@
     </div>
     <div class="content-grid">
         <div class="item"> 
-            <h3 class="text-title"> Hetrix Tool </h3>
+            <h3 class="text-title"> Blacklist </h3>
             <h2 class="blacklist-count">{{data["BlackList"]["count"]}} blacklisted count</h2>
-            <p class="text-content" style="text-align: center">{{data["BlackList"]["sites"]}} </p>
+            <div class="blacklist-details">
+                {% for site in data["BlackList"]["sites"] %}
+                    <p class="text-content"> {{site}}, </p>
+                {% endfor %}
+            </div>
+            
         </div>
         <div class="item">  
             <h3 class="text-title">DMARC </h3>
