--- a/static/css/domain.css
+++ b/static/css/domain.css
@@ -1,23 +1,19 @@
 .title-display{
-    display: flex;
-    flex-direction: row;
-    gap:1.5%;
-    align-content: space-between;
+    display: grid;
+    grid-template-columns: 35% 1fr ; 
+    gap: 1.5%; 
+    padding: 2% 3% 0% 3%;
 }
 .content-title{
     font-family: Arial, Helvetica, sans-serif;
     font-style: normal;
     font-weight: 700;
     font-size: clamp(36px, calc(1rem + 0.5vw), 56px);
-    width: 30%;
     color: #000000;
-    margin-left: 3%;
-    padding-top: 2%;
+
 }
 .search-bar{
     height: 5%;
-    margin-right: 3%;
-    padding-top: 2%;
 }
 .item{
     position: relative;
