--- a/templates/domain.html
+++ b/templates/domain.html
@@ -14,9 +14,9 @@
     </div>
 </div>
 <div class="board-display">
-    <div class="content-grid" style="grid-template-rows: 17% 81%;">
-        <div class="item">
-            <h3 class="text-title">IP address: {{data["IP Addr"]}}</h3>
+    <div class="content-grid grid-1">
+        <div class="item p-ip-addr">
+            <h3 class="text-title m-0 p-0">IP address: {{data["IP Addr"]}}</h3>
         </div>
         <div class="card" style=" background-color:  #333332;">
             <div id="map" class="card-img-top" data-lat = "{{ data['Geolocation']['latitude'] }}" data-lng="{{ data['Geolocation']['longitude'] }}" 
@@ -34,115 +34,213 @@
     <div class="content-grid" >
         <div class="item"> 
             <h3 class="text-title" >ISP: </h3>
-            <p class="text-content" style="text-align: center;padding-top: 7%;">{{data["ASN"]["ISP"]}} </p>
+            <p class="text-content text-center">{{data["ASN"]["ISP"]}} </p>
        </div>
        <div class="item">
-            <h3 class="text-title" >Organization: </h3>
-            <p class="text-content" style="text-align: center;padding-top: 7%;">{{data["Geolocation"]["Org"]}} </p>
+            <h3 class="text-title">Organization: </h3>
+            <p class="text-content text-center">{{data["Geolocation"]["Org"]}} </p>
        </div>
        
        <div class="item"> 
             <h3 class="text-title" >IP Range: </h3>
-            <p class="text-content" style="text-align: center;padding-top: 7%;">{{data["ASN"]["Range"]}} </p>
+            <p class="text-content text-center">{{data["ASN"]["Range"]}} </p>
        </div>
+       {% if data["Geolocation"]["Hostname"] != 'None' %}
+            <div class="item"> 
+                    <h3 class="text-title">HostName: </h3>
+                    <p class="text-content text-center">{{data["Geolocation"]["Hostname"]}} </p>
+            </div>
+        {% endif %}
        <div class="item"> 
-            <h3 class="text-title">HostName: </h3>
-            <p class="text-content" style="text-align: center; padding-top: 7%;">{{data["Geolocation"]["Hostname"]}} </p>
-       </div>
+        <h3 class="text-title"> Blacklist - HetrixTools </h3>
+        <h2 class="blacklist-count pb-0 p-top-1">{{data["HTBlacklist"]["count"]}} blacklisted count</h2>
+        <div class="blacklist-details pt-0">
+            {% for site in data["HTBlacklist"]["sites"] %}
+                <p class="text-content"> {{site}}, </p>
+            {% endfor %}
+        </div>
+    </div>
     </div>
     <div class="content-grid">
-        <div class="item"> 
-            <h3 class="text-title"> Blacklist </h3>
-            <h2 class="blacklist-count">{{data["BlackList"]["count"]}} blacklisted count</h2>
-            <div class="blacklist-details">
-                {% for site in data["BlackList"]["sites"] %}
-                    <p class="text-content"> {{site}}, </p>
-                {% endfor %}
-            </div>
-            
+        
+        <div class="item p-0">  
+            <table class="table table-striped table-dark m-0">
+                <thead>
+                  <tr>
+                    <th scope="col"></th>
+                    <th class="text-title t-title" scope="col">DMARC</th>
+                    <th class="text-title t-title" scope="col">DKIM</th>
+                    <th class="text-title t-title" scope="col">SPF</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <th class="text-title t-title" scope="row">Failed</th>
+                    <td class="text-content t-content">
+                        {% if data['Authentication']['DMARC']['Failed']['count'] != 0 %}
+                        <span 
+                            data-bs-toggle="tooltip" 
+                            data-bs-placement="top" 
+                            title="{{data['Authentication']['DMARC']['Failed']['details']}}" >
+                            {{data['Authentication']['DMARC']['Failed']['count']}}
+                        </span> 
+                        {% else %}
+                        {{data['Authentication']['DMARC']['Failed']['count']}}
+                        {% endif %}
+                    </td>
+                    <td class="text-content t-content">
+                        {% if data['Authentication']['DKIM']['Failed']['count'] != 0 %}
+                        <span 
+                            data-bs-toggle="tooltip" 
+                            data-bs-placement="top" 
+                            title="{{data['Authentication']['DKIM']['Failed']['details']}}" >
+                            {{data['Authentication']['DMARC']['Failed']['count']}}
+                        </span> 
+                        {% else %}
+                        {{data['Authentication']['DKIM']['Failed']['count']}}
+                        {% endif %}
+                    </td>
+                    <td class="text-content t-content">
+                        {% if data['Authentication']['SPF']['Failed']['count'] != 0 %}
+                        <span 
+                            data-bs-toggle="tooltip" 
+                            data-bs-placement="top" 
+                            title="{{data['Authentication']['SPF']['Failed']['details']}}" >
+                            {{data['Authentication']['SPF']['Failed']['count']}}
+                        </span> 
+                        {% else %}
+                        {{data['Authentication']['SPF']['Failed']['count']}}
+                        {% endif %}
+                    </td>
+                  </tr>
+                  <tr>
+                    <th class="text-title t-title" scope="row">Warnings</th>
+                    <td class="text-content t-content">
+                        {% if data['Authentication']['DMARC']['Warnings']['count'] != 0 %}
+                        <span 
+                            data-bs-toggle="tooltip" 
+                            data-bs-placement="top" 
+                            title="{{data['Authentication']['DMARC']['Warnings']['details']}}" >
+                            {{data['Authentication']['DMARC']['Warnings']['count']}}
+                        </span> 
+                        {% else %}
+                        {{data['Authentication']['DMARC']['Warnings']['count']}}
+                        {% endif %}
+                    </td>
+                    <td class="text-content t-content">
+                        {% if data['Authentication']['DKIM']['Warnings']['count'] != 0 %}
+                        <span 
+                            data-bs-toggle="tooltip" 
+                            data-bs-placement="top" 
+                            title="{{data['Authentication']['DKIM']['Warnings']['details']}}" >
+                            {{data['Authentication']['DKIM']['Warnings']['count']}}
+                        </span> 
+                        {% else %}
+                        {{data['Authentication']['DKIM']['Warnings']['count']}}
+                        {% endif %}   
+                    </td>
+                    <td class="text-content t-content">
+                        {% if data['Authentication']['SPF']['Warnings']['count'] != 0 %}
+                        <span 
+                            data-bs-toggle="tooltip" 
+                            data-bs-placement="top" 
+                            title="{{data['Authentication']['SPF']['Warnings']['details']}}" >
+                            {{data['Authentication']['SPF']['Warnings']['count']}}
+                        </span> 
+                        {% else %}
+                        {{data['Authentication']['SPF']['Warnings']['count']}}
+                        {% endif %}
+                    </td>
+                  </tr>
+                  <tr>
+                    <th class="text-title t-title" scope="row">Passed</th>
+                    <td class="text-content t-content">
+                        {% if data['Authentication']['DMARC']['Passed']['count'] != 0 %}
+                        <span 
+                            data-bs-toggle="tooltip" 
+                            data-bs-placement="top" 
+                            title="{{data['Authentication']['DMARC']['Passed']['details']}}" >
+                            {{data['Authentication']['DMARC']['Passed']['count']}}
+                        </span> 
+                        {% else %}
+                        {{data['Authentication']['DMARC']['Passed']['count']}}
+                        {% endif %}
+                    </td>
+                    <td class="text-content t-content">
+                        {% if data['Authentication']['DKIM']['Passed']['count'] != 0 %}
+                        <span 
+                            data-bs-toggle="tooltip" 
+                            data-bs-placement="top" 
+                            title="{{data['Authentication']['DKIM']['Passed']['details']}}" >
+                            {{data['Authentication']['DKIM']['Passed']['count']}}
+                        </span> 
+                        {% else %}
+                        {{data['Authentication']['DKIM']['Passed']['count']}}
+                        {% endif %}
+                    </td>
+                    <td class="text-content t-content">
+                        {% if data['Authentication']['SPF']['Passed']['count'] != 0 %}
+                        <span 
+                            data-bs-toggle="tooltip" 
+                            data-bs-placement="top" 
+                            title="{{data['Authentication']['SPF']['Passed']['details']}}" >
+                            {{data['Authentication']['SPF']['Passed']['count']}}
+                        </span> 
+                        {% else %}
+                        {{data['Authentication']['SPF']['Passed']['count']}}
+                        {% endif %}
+                    </td>
+                  </tr>
+                </tbody>
+              </table>
         </div>
-        <div class="item">  
-            <h3 class="text-title">DMARC </h3>
-            <p class="text-content"> Failed: 
-                <span 
-                    data-bs-toggle="tooltip" 
-                    data-bs-placement="top" 
-                    title="{{data['Authentication']['DMARC']['Failed']['details']}}" >
-                    {{data["Authentication"]["DMARC"]["Failed"]["count"]}}
-                </span>
-            </p>
-            <p class="text-content"> Warnings: 
-                <span 
-                    data-bs-toggle="tooltip" 
-                    data-bs-placement="top" 
-                    title="{{data['Authentication']['DMARC']['Warnings']['details']}}" >
-                    {{data["Authentication"]["DMARC"]["Warnings"]["count"]}}
-                </span>
-            </p>
-            <p class="text-content"> Passed:
-                <span 
-                    data-bs-toggle="tooltip" 
-                    data-bs-placement="top" 
-                    title="{{data['Authentication']['DMARC']['Passed']['details']}}" >
-                    {{data["Authentication"]["DMARC"]["Passed"]["count"]}}
-                </span>
-            </p>
-        </div>
-        <div class="item"> 
-            <h3 class="text-title">DKIM </h3>
-            <p class="text-content"> Failed: 
-                <span 
-                    data-bs-toggle="tooltip" 
-                    data-bs-placement="top" 
-                    title="{{data['Authentication']['DKIM']['Failed']['details']}}" >
-                    {{data["Authentication"]["DKIM"]["Failed"]["count"]}}
-                </span>
-            </p>
-            <p class="text-content"> Warnings: 
-                <span 
-                    data-bs-toggle="tooltip" 
-                    data-bs-placement="top" 
-                    title="{{data['Authentication']['DKIM']['Warnings']['details']}}" >
-                    {{data["Authentication"]["DKIM"]["Warnings"]["count"]}}
-                </span>
-                
-            </p>
-            <p class="text-content"> Passed: 
-                <span 
-                    data-bs-toggle="tooltip" 
-                    data-bs-placement="top" 
-                    title="{{data['Authentication']['DKIM']['Passed']['details']}}" >
-                    {{data["Authentication"]["DKIM"]["Passed"]["count"]}}
-                </span>
-            </p>
-
-        </div>
-        <div class="item"> 
-            <h3 class="text-title" >SPF </h3>
-            <p class="text-content"> Failed: 
-                <span 
-                    data-bs-toggle="tooltip" 
-                    data-bs-placement="top" 
-                    title="{{data['Authentication']['SPF']['Failed']['details']}}" >
-                    {{data["Authentication"]["SPF"]["Failed"]["count"]}}
-                </span>
-            </p>
-            <p class="text-content"> Warnings: 
-                <span 
-                    data-bs-toggle="tooltip" 
-                    data-bs-placement="top" 
-                    title="{{data['Authentication']['SPF']['Warnings']['details']}}" >
-                    {{data["Authentication"]["SPF"]["Warnings"]["count"]}}
-                </span>
-            </p>
-            <p class="text-content"> Passed: 
-                <span 
-                    data-bs-toggle="tooltip" 
-                    data-bs-placement="top" 
-                    title="{{data['Authentication']['SPF']['Passed']['details']}}" >
-                    {{data["Authentication"]["SPF"]["Passed"]["count"]}}
-                </span>
-            </p>
+        <div class="item" > 
+            <h3 class="text-title">Blacklist - VirusTotal </h3>
+            <div class="wrap">
+                <div class="icon">
+                    <img src="{{ url_for('static', filename='src/malicious.png') }}" alt="domain" width="10%" height="80%">
+                    <p class="text-content"> Malicious:
+                        {% if data["VTBlacklist"]['stats']["malicious"]['count'] != 0 %}
+                        <span 
+                            data-bs-toggle="tooltip" 
+                            data-bs-placement="top" 
+                            title="{{data['VTBlacklist']['stats']['malicious']['details']}}" >
+                            {{data["VTBlacklist"]['stats']["malicious"]['count']}}
+                        </span>   
+                        {% else %}
+                        {{data["VTBlacklist"]['stats']["malicious"]['count']}} 
+                        {% endif %}
+                    </p>
+                </div>
+                <div class="icon">
+                    <img src="{{ url_for('static', filename='src/suspicious.png') }}" alt="domain" width="10%" height="80%">
+                    <p class="text-content"> Suspicious: 
+                     {% if data["VTBlacklist"]['stats']["suspicious"]['count'] != 0 %}
+                    <span 
+                        data-bs-toggle="tooltip" 
+                        data-bs-placement="top" 
+                        title="{{data['VTBlacklist']['stats']['suspicious']['details']}}" >
+                        {{data["VTBlacklist"]['stats']["suspicious"]['count']}}
+                    </span>   
+                    {% else %}
+                    {{data["VTBlacklist"]['stats']["suspicious"]['count']}} 
+                    {% endif %}
+                    </p>
+                   
+                </div>
+                <div class="icon">
+                    <img src="{{ url_for('static', filename='src/undetected.png') }}" alt="domain" width="10%" height="80%">
+                    <p class="text-content"> Undetected : {{data["VTBlacklist"]['stats']["undetected"]}} </p>
+                </div>
+                <div class="icon">
+                    <img src="{{ url_for('static', filename='src/harmless.png') }}" alt="domain" width="10%" height="80%">
+                    <p class="text-content"> Harmless : {{data["VTBlacklist"]['stats']["harmless"]}} </p>
+                </div>
+                <div class="icon">
+                    <img src="{{ url_for('static', filename='src/timeout.png') }}" alt="domain" width="10%" height="80%">
+                    <p class="text-content"> Timeout : {{data["VTBlacklist"]['stats']["timeout"]}} </p>
+                </div>           
+          </div>
         </div>
     </div>
 </div>
