--- a/templates/url.html
+++ b/templates/url.html
@@ -6,8 +6,8 @@
 {% endblock %}
 {% block content %}
 <div class="title-display">
-    <h1  class="content-title"> URL link: {{url_link}}</h1>
-    <div class="input-group mb-2 inputbar" style="align-self:center; height:6vh; width: 75%; ">
+    <h1  class="content-title url-title"> URL: {{url_link}}</h1>
+    <div class="input-group mb-0 align-self-center w-75">
         <input id="inputURL"  type="text" class="form-control " placeholder="Enter an URL" aria-label="enter" aria-describedby="button-addon2">
         <button id="submitURL" class="btn btn-outline-secondary" type="button" >Enter</button>
     </div>
