--- a/templates/url.html
+++ b/templates/url.html
@@ -16,11 +16,23 @@
     <div class="wrap">
         <div class="icon">
             <img src="{{ url_for('static', filename='src/malicious.png') }}" alt="domain" width="5%" height="65%">
-            <p class="text-content"> Malicious : {{data["malicious"]}} </p>
+            <p class="text-content"> Malicious : {{data["malicious"]["count"]}}    
+                {% if data["malicious"]["count"] != 0 %}
+                    {% for detail in data['malicious']['details']%}
+                        {{detail}}
+                    {% endfor %}
+                {% endif %}
+            </p>
         </div>
         <div class="icon">
             <img src="{{ url_for('static', filename='src/suspicious.png') }}" alt="domain"  width="5%" height="65%">
-            <p class="text-content"> Suspicious : {{data["suspicious"]}} </p>
+            <p class="text-content"> Suspicious : {{data["suspicious"]}} 
+                {% if data["suspicious"]["count"] != 0 %}
+                    {% for detail in data['suspicious']['details']%}
+                        {{detail}}
+                    {% endfor %}
+                {% endif %}
+            </p>
         </div>
         <div class="icon">
             <img src="{{ url_for('static', filename='src/undetected.png') }}" alt="domain"  width="5%" height="65%">
