set available on other devices

--- a/templates/ip.html
+++ b/templates/ip.html
@@ -100,7 +100,7 @@
                 </div>
                 <div class="icon">
                     <img src="{{ url_for('static', filename='src/harmless.png') }}" alt="domain" width="10%" height="80%">
-                    <p class="text-content"> Harmless : {{data["VTBlacklist"]['stats']["harmless"]}} </p>
+                    <p class="text-content"> Clear : {{data["VTBlacklist"]['stats']["harmless"]}} </p>
                 </div>
                 <div class="icon">
                     <img src="{{ url_for('static', filename='src/timeout.png') }}" alt="domain" width="10%" height="80%">
