--- a/templates/url.html
+++ b/templates/url.html
@@ -40,7 +40,7 @@
         </div>
         <div class="icon">
             <img src="{{ url_for('static', filename='src/harmless.png') }}" alt="domain"  width="5%" height="65%">
-            <p class="text-content"> Harmless : {{data["harmless"]}} </p>
+            <p class="text-content"> Clear : {{data["harmless"]}} </p>
         </div>
         <div class="icon">
             <img src="{{ url_for('static', filename='src/timeout.png') }}" alt="domain"  width="5%" height="65%">
