--- a/static/css/domain.css
+++ b/static/css/domain.css
@@ -19,7 +19,7 @@
     display: flex;
     flex-direction: column;
     gap:1%;
-    overflow: hidden;
+    overflow: auto;
 }
 .content-grid {
     display: grid;
