--- a/static/css/base.css
+++ b/static/css/base.css
@@ -4,7 +4,9 @@
     flex-direction: row;
     height: 100vh;
 }
-
+.search-bar{
+    height: 5%;
+}
 .nav-bar{
     position: sticky;
     gap: 5%;
@@ -47,7 +49,7 @@
     font-family: Arial, Helvetica, sans-serif;
     font-style: normal;
     font-weight: 700;
-    font-size: clamp(36px, calc(1rem + 0.5vw), 56px);
+    font-size: clamp(36px, calc(1rem + 0.5vw), 72px);
     line-height: 20%;
     margin-left: 3%;
     margin-top: 1%;
@@ -71,7 +73,7 @@
     font-family: Arial, Helvetica, sans-serif;
     font-style: normal;
     font-weight: 400;
-    font-size: clamp(20px, calc(0.8rem + 0.5vw), 28px);
+    font-size: clamp(20px, calc(0.8rem + 0.5vw), 36px);
     text-align: left;
     padding-left: 2%;
 }
@@ -98,7 +100,7 @@
     font-family: Arial, Helvetica, sans-serif;
     font-style: normal;
     font-weight: 400;
-    font-size: clamp(28px, calc(0.8rem + 0.5vw), 36px);
+    font-size: clamp(28px, calc(0.8rem + 0.5vw), 56px);
     text-align: center;
 }
 .blacklist-details{
